Fix color not showing on perks page

--- a/app/assets/stylesheets/components/_promos.scss
+++ b/app/assets/stylesheets/components/_promos.scss
@@ -149,6 +149,9 @@
 
 .promo-robotics-raffle {
   background-color: #0066b3;
+  .card__banner--top {
+    background-color: #0066b3;
+  }
 }
 
 @property --gradient-angle {
